为 set 指令添加默认贴图名称占位符